--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "In this challenge, you design and build a Data Model and a RESTful API that stores data into a Relational Database.",
   "main": "knexfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "nodemon index.js",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "knex": "^0.20.7",
+    "nodemon": "^2.0.2",
     "sqlite3": "^4.1.1"
   }
 }
